# FMaths

./: CMakeLists.txt  CMakePresets.json  README.md
include/FMaths/: Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h
src/FMaths/: Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
tests/: CMakeLists.txt  Matrix.cpp  Vector3.cpp
